<resources>
    <string name="app_name">Beginner Application</string>
    <string name="enter">Enter</string>
    <string name="change">Change</string>
    <string name="ok">OK</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="allsearch">All Search</string>
    <string name="delete">Delete</string>
    <string name="alldelete">All Delete</string>
</resources>
